Phase 6: Stripe Connect Payments

--- a/la-grieta/web/src/app/app.html
+++ b/la-grieta/web/src/app/app.html
@@ -1,4 +1,4 @@
-<lg-navigation></lg-navigation>
-<lg-cart-sidebar>
+<app-navigation></app-navigation>
+<app-cart-sidebar>
   <router-outlet></router-outlet>
-</lg-cart-sidebar>
+</app-cart-sidebar>
