--- a/la-grieta/web/src/app/features/cards/card-detail/card-detail.component.html
+++ b/la-grieta/web/src/app/features/cards/card-detail/card-detail.component.html
@@ -5,7 +5,7 @@
   </button>
 
   @if (loading()) {
-    <lg-loading-spinner message="Loading card details..."></lg-loading-spinner>
+    <app-loading-spinner message="Loading card details..."></app-loading-spinner>
   }
 
   @if (error()) {
